src/test/deca/syntax/valid/no_init.deca
//Description
//    Vérifier la syntaxe des inexp
//
//Résultats :
//   Ok
//

{
int a,b=3;
}
