src/test/deca/syntax/invalid/semi2.deca
//Description
//    Vérifier la considération des points virgules
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
float a = 3
}
